working on how users will use component api

--- a/PseudoCQRS.Tests/PseudoCQRS.Tests.csproj
+++ b/PseudoCQRS.Tests/PseudoCQRS.Tests.csproj
@@ -113,6 +113,8 @@
     <Compile Include="CommandBusTests.cs" />
     <Compile Include="CommandHandlerFinderTests.cs" />
     <Compile Include="CommandHandlerProviderTests.cs" />
+    <Compile Include="Compoents\Examples\AskABidQuestionComponent.cs" />
+    <Compile Include="Compoents\Examples\BidWinnerComponent.cs" />
     <Compile Include="Configuration\DependencyInjectionContainerTests.cs" />
     <Compile Include="Configuration\DependencyInjectionServiceLocatorTests.cs" />
     <Compile Include="Configuration\DIConfigurationTests.cs" />
